chore: set up publishing

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,4 +1,4 @@
-defaultSemverRangePrefix: ''
+defaultSemverRangePrefix: ""
 
 logFilters:
   - code: YN0002
@@ -10,4 +10,4 @@ logFilters:
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.7.0.cjs
+yarnPath: .yarn/releases/yarn-4.9.2.cjs
