--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,12 @@ dist-ssr
 
 *storybook.log
 storybook-static
+
+# Yarn, without zero install https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
