--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "type": "git",
     "url": "https://github.com/bje-co/blocks.git"
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/main.d.mts",
+        "default": "./dist/index.js"
+      }
+    }
+  },
   "files": [
     "dist"
   ],
@@ -55,7 +61,7 @@
     "vite-plugin-dts": "4.5.4",
     "vite-plugin-lib-inject-css": "2.2.2"
   },
-  "packageManager": "yarn@4.7.0",
+  "packageManager": "yarn@4.9.2",
   "dependencies": {
     "react-error-boundary": "6.0.0"
   }
