--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "prepublishOnly": "yarn build && yarn run clear-package-json package.json > package.json",
+    "prepare": "yarn run build",
+    "prepublishOnly": "yarn run clear-package-json package.json > package.json",
     "dev": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
