--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "prepare": "yarn run build",
-    "prepublishOnly": "yarn run clear-package-json package.json > package.json",
+    "prepublishOnly": "yarn run build",
+    "prepack": "clean-package",
     "dev": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build"
   },
@@ -45,7 +45,7 @@
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react-swc": "3.10.2",
-    "clean-publish": "5.2.2",
+    "clean-package": "2.2.0",
     "eslint": "9.29.0",
     "eslint-plugin-react-hooks": "5.2.0",
     "eslint-plugin-react-refresh": "0.4.20",
@@ -68,9 +68,9 @@
   "dependencies": {
     "react-error-boundary": "6.0.0"
   },
-  "clean-publish": {
-    "withoutPublish": true,
-    "fields": [
+  "clean-package": {
+    "remove": [
+      "clean-package",
       "packageManager"
     ]
   }
