fix: remove additional fields

--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
   "clean-package": {
     "remove": [
       "clean-package",
-      "packageManager"
+      "packageManager",
+      "prettier",
+      "scripts"
     ]
   }
 }
