--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@bjeco/blocks",
+  "description": "A collection of utility React components.",
   "author": "Brian Espinosa <b@bje.co>",
   "license": "MIT",
   "version": "1.2.0",
@@ -25,6 +26,7 @@
   "scripts": {
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "docgen": "node scripts/docgen.mjs",
     "prepublishOnly": "yarn run build",
     "prepack": "clean-package",
     "dev": "storybook dev -p 6006 --no-open",
@@ -52,12 +54,21 @@
     "eslint-plugin-storybook": "9.0.13",
     "glob": "11.0.3",
     "globals": "16.2.0",
+    "lint-staged": "16.1.2",
+    "postcss": "8.5.6",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
+    "react-docgen": "8.0.0",
     "react-dom": "19.1.0",
     "sass-embedded": "1.89.2",
     "semantic-release": "24.2.6",
+    "simple-git-hooks": "2.13.0",
     "storybook": "^9.0.13",
+    "stylelint": "16.19.1",
+    "stylelint-config-css-modules": "4.4.0",
+    "stylelint-config-idiomatic-order": "10.0.0",
+    "stylelint-config-recommended-scss": "15.0.1",
+    "stylelint-config-standard": "38.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "8.35.0",
     "vite": "6.3.5",
@@ -66,13 +77,18 @@
   },
   "packageManager": "yarn@4.9.2",
   "dependencies": {
+    "@react-docgen/cli": "3.0.1",
     "react-error-boundary": "6.0.0"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "yarn docgen && npx lint-staged"
   },
   "clean-package": {
     "remove": [
       "clean-package",
       "devDependencies",
       "packageManager",
+      "simple-git-hooks",
       "prettier",
       "scripts"
     ]
