--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "globals": "16.2.0",
     "lint-staged": "16.1.2",
     "postcss": "8.5.6",
+    "prettier": "3.6.2",
     "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-docgen": "8.0.0",
